--- a/ABSTRACTSITE/index.html
+++ b/ABSTRACTSITE/index.html
@@ -11,11 +11,12 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #000;
+            background: none;
             overflow: hidden;
         }
         canvas {
             display: block;
+            background: none;
         }
     </style>
 </head>
