--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
     <nav>
         <a href="https://github.com/c4nbe/c4nbe">Github</a>
-        <a href="https://c4nbe.github.io/C0de_1/ABSTRACTSITE/index.html">Trip</a>
+        <a href="https://c4nbe.github.io/C0de_1/ABSTRACTSITE/index.html">Trippy</a>
     </nav>
     </main>
     <footer>
