--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <nav>
         <a href="https://github.com/c4nbe/c4nbe">Github</a>
         <a href="https://c4nbe.github.io/C0de_1/ABSTRACTSITE/index.html">Trippy</a>
+        <a href="https://c4nbe.github.io/C0de_1/Blackmail/Companion.html">Letter Placer</a>
     </nav>
     </main>
     <footer>
