--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <a href="https://github.com/c4nbe/c4nbe">Github</a>
         <a href="https://c4nbe.github.io/C0de_1/ABSTRACTSITE/index.html">Trippy</a>
         <a href="https://c4nbe.github.io/C0de_1/Blackmail/Companion.html">Letter Placer</a>
-        <a hred="???">LinterTest</a>
+        <a href="???">LinterTest</a>
     </nav>
     </main>
     <footer>
