--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
         <a href="https://github.com/c4nbe/c4nbe">Github</a>
         <a href="https://c4nbe.github.io/C0de_1/ABSTRACTSITE/index.html">Trippy</a>
         <a href="https://c4nbe.github.io/C0de_1/Blackmail/Companion.html">Letter Placer</a>
-        <a href="???">LinterTest</a>
+        <a href="https://c4nbe.github.io/C0de_1/LinterTest/index.html">LinterTest</a>
+        <a href="https://github.com/c4nbe/C0de2">Code 2 Repo</a>
     </nav>
     </main>
     <footer>
